fixed broken css link

--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -12,6 +12,10 @@ h1 {
     text-align: center;
 }
 
+body {
+    background-color: blue;
+}
+
 #content {
 
 }
